fix: change the website title and name

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="author" content="KvJellyBean" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <title>PokeMatch</title>
+    <title>PokeMind</title>
   </head>
   <body>
     <div id="root"></div>
